--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
 
             <ul class="flex-nav-contact list">
                 <li class="nav-contact-item">
-                    <a href="mailto:info@devstudio.com" class="link site-contact">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="link site-contact">
+                        <svg class="nav-icons" width="16" height="12"> 
+                            <use href="./images/icons.svg#icon-mail"><use>
+						</svg>
+                        info@devstudio.com</a>
                 </li>
                 <li class="nav-contact-item">
-                    <a href="tel:+380961111111" class="link site-contact">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="link site-contact">
+                        <svg class="nav-icons" width="10" height="16"> 
+                            <use href="./images/icons.svg#icon-smartphone"><use>
+						</svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
