--- a/portfolio.html
+++ b/portfolio.html
@@ -18,14 +18,14 @@
     <header class="header-border">
         <div class="flex-nav container">
             <nav class="flex-nav">
-                <a href="index.html" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span>
+                <a href="/" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span>
           </a>
                 <ul class="flex-nav-menu list">
                     <li class="nav-menu-item">
-                        <a href="./index.html" class="link site-nav-text">Студия</a>
+                        <a href="/" class="link site-nav-text current">Студия</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="./portfolio.html" class="link site-nav-text current">Портфолио</a>
+                        <a href="./portfolio.html" class="link site-nav-text">Портфолио</a>
                     </li>
                     <li class="nav-menu-item"><a href="" class="link site-nav-text">Контакты</a></li>
                 </ul>
@@ -33,10 +33,18 @@
 
             <ul class="flex-nav-contact list">
                 <li class="nav-contact-item">
-                    <a href="mailto:info@devstudio.com" class="link site-contact">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="link site-contact">
+                        <svg class="nav-icons" width="16" height="12"> 
+                            <use href="./images/icons.svg#icon-mail"><use>
+						</svg>
+                        info@devstudio.com</a>
                 </li>
                 <li class="nav-contact-item">
-                    <a href="tel:+380961111111" class="link site-contact">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="link site-contact">
+                        <svg class="nav-icons" width="10" height="16"> 
+                            <use href="./images/icons.svg#icon-smartphone"><use>
+						</svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
