add social network

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <ul class="advantages-list list">
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="nav-icons" width="70" height="70"> 
+                        <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-antenna"><use>
 						</svg>
                         </div>
@@ -79,7 +79,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="nav-icons" width="70" height="70"> 
+                        <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-clock"><use>
 						</svg>
                         </div>
@@ -90,7 +90,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="nav-icons" width="70" height="70"> 
+                        <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-diagram"><use>
 						</svg>
                         </div>
@@ -101,7 +101,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="nav-icons" width="70" height="70"> 
+                        <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-astronaut"><use>
 						</svg>
                         </div>
@@ -142,7 +142,32 @@
                         <div class="team-item-text">
                             <h3 class="team-item-title">Игорь Демьяненко</h3>
                             <p class="team-item-role" lang="en">Product Designer</p>
-                        </div>
+                         <ul class="list social-network">
+                             <li>
+                                  <svg class="team-icons"> 
+                            <use href="./images/icons.svg#icon-instagram"><use>
+						</svg>
+                             </li>
+                             <li>
+                                  <svg class="team-icons"> 
+                            <use href="./images/icons.svg#icon-twitter"><use>
+						</svg>
+                             </li>
+                             <li>
+                                  <svg class="team-icons"> 
+                            <use href="./images/icons.svg#icon-facebook"><use>
+						</svg>
+                             </li>
+                             <li>
+                                  <svg class="team-icons"> 
+                            <use href="./images/icons.svg#icon-linkedin"><use>
+						</svg>
+                             </li>
+
+                         </ul>                    
+                       
+                        </div>                     
+
                     </li>
 
                     <li class="team-item">
