--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
                     <a href="mailto:info@devstudio.com" class="link site-contact">
                         <svg class="nav-icons" width="16" height="12"> 
                             <use href="./images/icons.svg#icon-mail"><use>
-						</svg>
-                        info@devstudio.com</a>
+						</svg> info@devstudio.com
+                    </a>
                 </li>
                 <li class="nav-contact-item">
                     <a href="tel:+380961111111" class="link site-contact">
                         <svg class="nav-icons" width="10" height="16"> 
                             <use href="./images/icons.svg#icon-smartphone"><use>
-						</svg>
-                        +38 096 111 11 11</a>
+						</svg> +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -68,7 +67,7 @@
                 <ul class="advantages-list list">
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="advantages-icons"> 
+                            <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-antenna"><use>
 						</svg>
                         </div>
@@ -79,7 +78,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="advantages-icons"> 
+                            <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-clock"><use>
 						</svg>
                         </div>
@@ -90,7 +89,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="advantages-icons"> 
+                            <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-diagram"><use>
 						</svg>
                         </div>
@@ -101,7 +100,7 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                        <svg class="advantages-icons"> 
+                            <svg class="advantages-icons"> 
                             <use href="./images/icons.svg#icon-astronaut"><use>
 						</svg>
                         </div>
@@ -142,31 +141,32 @@
                         <div class="team-item-text">
                             <h3 class="team-item-title">Игорь Демьяненко</h3>
                             <p class="team-item-role" lang="en">Product Designer</p>
-                         <ul class="list social-network">
-                             <li>
-                                  <svg class="team-icons"> 
+                            <ul class="list social-network">
+                                <li class="social-network-list">
+                                    <a class="social-network-link" href=""><svg class="team-icons"> 
                             <use href="./images/icons.svg#icon-instagram"><use>
-						</svg>
-                             </li>
-                             <li>
-                                  <svg class="team-icons"> 
+						</svg></a>
+
+                                </li>
+                                <li>
+                                    <svg class="team-icons"> 
                             <use href="./images/icons.svg#icon-twitter"><use>
 						</svg>
-                             </li>
-                             <li>
-                                  <svg class="team-icons"> 
+                                </li>
+                                <li>
+                                    <svg class="team-icons"> 
                             <use href="./images/icons.svg#icon-facebook"><use>
 						</svg>
-                             </li>
-                             <li>
-                                  <svg class="team-icons"> 
+                                </li>
+                                <li>
+                                    <svg class="team-icons"> 
                             <use href="./images/icons.svg#icon-linkedin"><use>
 						</svg>
-                             </li>
+                                </li>
 
-                         </ul>                    
-                       
-                        </div>                     
+                            </ul>
+
+                        </div>
 
                     </li>
 
