--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="flex-nav container">
             <nav class="flex-nav">
                 <a href="/" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span>
-          </a>
+                </a>
                 <ul class="flex-nav-menu list">
                     <li class="nav-menu-item">
                         <a href="/" class="link site-nav-text current">Студия</a>
@@ -141,33 +141,37 @@
                         <div class="team-item-text">
                             <h3 class="team-item-title">Игорь Демьяненко</h3>
                             <p class="team-item-role" lang="en">Product Designer</p>
-                            <ul class="list social-network">
-                                <li class="social-network-list">
-                                    <a class="social-network-link" href=""><svg class="team-icons"> 
-                            <use href="./images/icons.svg#icon-instagram"><use>
-						</svg></a>
-
+                            <ul class="team-social-list">
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+                                    </a>
                                 </li>
-                                <li>
-                                    <svg class="team-icons"> 
-                            <use href="./images/icons.svg#icon-twitter"><use>
-						</svg>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+                                    </a>
                                 </li>
-                                <li>
-                                    <svg class="team-icons"> 
-                            <use href="./images/icons.svg#icon-facebook"><use>
-						</svg>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+                                    </a>
                                 </li>
-                                <li>
-                                    <svg class="team-icons"> 
-                            <use href="./images/icons.svg#icon-linkedin"><use>
-						</svg>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+                                    </a>
                                 </li>
-
                             </ul>
-
                         </div>
-
                     </li>
 
                     <li class="team-item">
@@ -175,6 +179,36 @@
                         <div class="team-item-text">
                             <h3 class="team-item-title">Ольга Репина</h3>
                             <p class="team-item-role" lang="en">Frontend Developer</p>
+                            <ul class="team-social-list">
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
 
@@ -183,6 +217,36 @@
                         <div class="team-item-text">
                             <h3 class="team-item-title">Николай Тарасов</h3>
                             <p class="team-item-role" lang="en">Marketing</p>
+                            <ul class="team-social-list">
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -190,11 +254,92 @@
                         <div class="team-item-text">
                             <h3 class="team-item-title">Михаил Ермаков</h3>
                             <p class="team-item-role" lang="en">UI Designer</p>
+                            <ul class="team-social-list">
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+                                    </a>
+                                </li>
+                                <li class="list team-social">
+                                    <a class="team-social-link link" href="">
+                                        <svg class="team-icon" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <!-- section clients -->
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="title clients-title">Постоянные клиенты</h2>
+                <ul class="list clients-list">
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg class="clients-logo">
+									<use href="./images/icons.svg#icon-logo-1"></use>
+								</svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg class="clients-logo">
+									<use href="./images/icons.svg#icon-logo-2"></use>
+								</svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg class="clients-logo">
+									<use href="./images/icons.svg#icon-logo-3"></use>
+								</svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg class="clients-logo">
+									<use href="./images/icons.svg#icon-logo-4"></use>
+								</svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg class="clients-logo">
+									<use href="./images/icons.svg#icon-logo-5"></use>
+								</svg>
+                        </a>
+                    </li>
+                    <li class="clients-item">
+                        <a class="clients-link" href="">
+                            <svg class="clients-logo">
+									<use href="./images/icons.svg#icon-logo-6"></use>
+								</svg>
+                        </a>
+                    </li>
+
+
     </main>
 
     <!-- section footer -->
@@ -203,16 +348,50 @@
             <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
         </a>
             <address>
-          <ul>
+            <ul>
             <li class="footer-map list footer-adress">г. Киев, пр-т Леси Украинки, 26</li>
             <li class="list footer-adress">
-              <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
             </li>
             <li class="list footer-adress">
-              <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer-contact link">+38 096 111 11 11</a>
             </li>
-          </ul>
+            </ul>
         </address>
+            <div class="footer-socials">
+                <h3 class="footer-socials-title">присоединяйтесь</h3>
+                <ul class="footer-socials-list list">
+                    <li>
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="footer-socials-link link" href="">
+                            <svg class="footer-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
         </div>
     </footer>
 </body>
