--- a/index.html
+++ b/index.html
@@ -364,35 +364,34 @@
                     <li>
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
                         </a>
                     </li>
-                    <li>
+
+                    <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
                         </a>
                     </li>
                 </ul>
-
             </div>
-        </div>
     </footer>
 </body>
 
