add site-nav-text.current + wedo-backdrop-text

--- a/index.html
+++ b/index.html
@@ -125,12 +125,21 @@
                 <ul class="wedo-list list">
                     <li class="wedo-item">
                         <img src="./images/box1.jpg" alt="печатает на клавиатуре" width="370" />
+                        <div class="wedo-backdrop">
+                            <p class="wedo-backdrop-text">Десктопные приложения</p>
+                        </div>
                     </li>
                     <li class="wedo-item">
                         <img src="./images/box2.jpg" alt="пульт в руках" width="370" />
+                        <div class="wedo-backdrop">
+                            <p class="wedo-backdrop-text">Мобильные приложения</p>
+                        </div>
                     </li>
                     <li class="wedo-item">
                         <img src="./images/box3.jpg" alt="планшет" width="370" />
+                        <div class="wedo-backdrop">
+                            <p class="wedo-backdrop-text">Дизайнерские решения</p>
+                        </div>
                     </li>
                 </ul>
             </div>
