fix hv-05 to hw-04

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
                 <a href="/" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span></a>
                 <ul class="flex-nav-menu list">
                     <li class="nav-menu-item">
-                        <a href="/" class="link site-nav-text">Студия</a>
+                        <a href="/" class="link site-nav-text current">Студия</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="./portfolio.html" class="link site-nav-text current">Портфолио</a>
+                        <a href="./portfolio.html" class="link site-nav-text">Портфолио</a>
                     </li>
                     <li class="nav-menu-item"><a href="" class="link site-nav-text">Контакты</a></li>
                 </ul>
