fix mentor comment

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
     <header class="header-border">
         <div class="flex-nav container">
             <nav class="flex-nav">
-                <a href="/" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span></a>
+                <a href="./index.html" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span></a>
                 <ul class="flex-nav-menu list">
                     <li class="nav-menu-item">
-                        <a href="/" class="link site-nav-text current">Студия</a>
+                        <a href="./index.html" class="link site-nav-text">Студия</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="./portfolio.html" class="link site-nav-text">Портфолио</a>
+                        <a href="./portfolio.html" class="link site-nav-text current">Портфолио</a>
                     </li>
                     <li class="nav-menu-item"><a href="" class="link site-nav-text">Контакты</a></li>
                 </ul>
@@ -69,7 +69,7 @@
                 <h2 class="visually-hidden">Примеры наших работ</h2>
                 <ul class="portfolio-examples list">
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/technocrats.jpg"
+                        <a href="" class="works-link link"><img src="./images/technocrats.jpg"
                                 alt="прооект веб-сайта на макбук про" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Технокряк</h3>
@@ -79,8 +79,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/poster.jpg" alt="постера баскетбольной команды"
-                                width="370" />
+                        <a href="" class="works-link link"><img src="./images/poster.jpg"
+                                alt="постера баскетбольной команды" width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">
                                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -91,7 +91,7 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/seafood.jpg"
+                        <a href="" class="works-link link"><img src="./images/seafood.jpg"
                                 alt="логотип раесторана морких продуктов" width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
@@ -101,7 +101,7 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/prime.jpg" alt="наушники" width="370" />
+                        <a href="" class="works-link link"><img src="./images/prime.jpg" alt="наушники" width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -110,7 +110,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/boxes.jpg" alt="две коробки" width="370" />
+                        <a href="" class="works-link link"><img src="./images/boxes.jpg" alt="две коробки"
+                                width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
                                 <p class="portfolio-text">Приложение</p>
@@ -119,8 +120,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/inspiration.jpg" alt="проект Веб-сайта на и-мак"
-                                width="370" />
+                        <a href="" class="works-link link"><img src="./images/inspiration.jpg"
+                                alt="проект Веб-сайта на и-мак" width="370" />
                             <div class="works-item-bottom">
                                 <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -129,8 +130,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/publication.jpg" alt="журнал лимитед эдишн"
-                                width="370" />
+                        <a href="" class="works-link link"><img src="./images/publication.jpg"
+                                alt="журнал лимитед эдишн" width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
                                 <p class="portfolio-text">Дизайн</p>
@@ -139,7 +140,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/lab.jpg" alt="ярлык лаб эль таг" width="370" />
+                        <a href="" class="works-link link"><img src="./images/lab.jpg" alt="ярлык лаб эль таг"
+                                width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Проект <span lang="en">LAB</span></h3>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -148,7 +150,7 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/growing.jpg" alt="печатает на клавиатуре"
+                        <a href="" class="works-link link"><img src="./images/growing.jpg" alt="печатает на клавиатуре"
                                 width="370" />
                             <div class="works-item-bottom">
                                 <h3 lang="en" class="portfolio-title">Growing Business</h3>
